Unrestricted policy file.